# robotkirby

./: .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yml  bot.py  docker-compose.yml  filehandler.py  main.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
birdbot/: Dockerfile  README.md  requirements.txt
birdbot/birdbot/: README.md  __main__.py  bot.py
birdbot/birdbot/database/: database.py
birdbot/birdbot/modules/: aggregator.py
birdobserver/birdobserver/: __main__.py
cogs/: arg.py  config.py  echo.py  emoji.py  filehandler.py  giftcard.py  hello.py  insult.py  invite.py  markovlogger.py  members.py  meme.py  optin.py  rng.py  sentient.py  spam.py  temp.py  tribal.py  trumptweets.py
cogs/utils/: checks.py
robotkirby/: GUI_kirby.py  __main__.py  bot.py
robotkirby/db/: __init__.py  db_driver.py  local_db_driver.py
robotkirby/local_plugins/: my_wordcloud.py  opinion.py  sentient.py  timedensity.py
robotkirby/plugins/: bot_sentient.py  delete.py  log_message.py  opinion.py  optin.py  rankedopinion.py  sentient.py  sentiment.py  similarity.py  timedensity.py  utilities.py  wordcloud.py  wrapped.py
